k8-deploy.yaml
# Creates Replicaset 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
spec:
  replicas: 3
  strategy: 
    # type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: 164910480407.dkr.ecr.us-east-1.amazonaws.com/payment:006
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  selector:
     app: payment
  ports:
    - protocol: TCP
      port: 8080                         # Port number that your service has to listen and this is the port you will access
      targetPort: 8080                   # TargetPort forwards the requests to the backend pod


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
spec:
  rules:
  - host: robot-frontend.b54-roboshop.in
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: payment-svc
            port:
              number: 8080
  ingressClassName: nginx
